[project]
version = "0.0.0rc2"
name = "iata"
authors = [
    {name = "jqssun", email = "jqssun+git@googlemail.com"},
]
description = ""
readme = "README.md"
license-files = [ "LICENSE" ]

[tool.setuptools]
packages = ["iata", "iata.bcbp"]

[project.urls]
Homepage = "https://github.com/jqssun/iata"
Repository = "https://github.com/jqssun/iata.git"